[project]
name = "candidate-ranking-demo"
version = "0.1.0"
description = "A demo of using Superlinked for candidate ranking."
readme = "README.md"
requires-python = "<3.14,>=3.13"  # Streamlit does not yet support 3.14
dependencies = [
    "altair>=5.5.0",
    "pandas>=2.3.3",
    "streamlit>=1.51.0",
    "superlinked>=37.5.0",
]
license = "GPL-3.0-or-later"

[dependency-groups]
dev = [
    "ipython>=9.7.0",
    "jupyterlab>=4.4.10",
    "mypy>=1.18.2",
    "pytest>=9.0.0",
    "ruff>=0.14.4",
]

[tool.ruff]
line-length = 120
lint.ignore = []

[tool.uv]
package = false

[[tool.uv.index]]
name = "nvidia"  # Much faster for NVIDIA packages
url = "https://pypi.nvidia.com"
explicit = true

[tool.uv.sources]
nvidia-cublas-cu12 = { index = "nvidia", marker = "platform_machine == 'x86_64' and sys_platform == 'linux'" }
nvidia-cuda-cupti-cu12 = { index = "nvidia", marker = "platform_machine == 'x86_64' and sys_platform == 'linux'" }
nvidia-cuda-nvrtc-cu12 = { index = "nvidia", marker = "platform_machine == 'x86_64' and sys_platform == 'linux'" }
nvidia-cuda-runtime-cu12 = { index = "nvidia", marker = "platform_machine == 'x86_64' and sys_platform == 'linux'" }
nvidia-cudnn-cu12 = { index = "nvidia", marker = "platform_machine == 'x86_64' and sys_platform == 'linux'" }
nvidia-cufft-cu12 = { index = "nvidia", marker = "platform_machine == 'x86_64' and sys_platform == 'linux'" }
nvidia-cufile-cu12 = { index = "nvidia", marker = "platform_machine == 'x86_64' and sys_platform == 'linux'" }
nvidia-curand-cu12 = { index = "nvidia", marker = "platform_machine == 'x86_64' and sys_platform == 'linux'" }
nvidia-cusolver-cu12 = { index = "nvidia", marker = "platform_machine == 'x86_64' and sys_platform == 'linux'" }
nvidia-cusparse-cu12 = { index = "nvidia", marker = "platform_machine == 'x86_64' and sys_platform == 'linux'" }
nvidia-cusparselt-cu12 = { index = "nvidia", marker = "platform_machine == 'x86_64' and sys_platform == 'linux'" }
nvidia-nccl-cu12 = { index = "nvidia", marker = "platform_machine == 'x86_64' and sys_platform == 'linux'" }
nvidia-nvjitlink-cu12 = { index = "nvidia", marker = "platform_machine == 'x86_64' and sys_platform == 'linux'" }
nvidia-nvshmem-cu12 = { index = "nvidia", marker = "platform_machine == 'x86_64' and sys_platform == 'linux'" }
nvidia-nvtx-cu12 = { index = "nvidia", marker = "platform_machine == 'x86_64' and sys_platform == 'linux'" }
